generated/checker-for-evaluation/generated/test-Out-of-Bound-c3d749609472ba0b217b42ab66f80459847e2bcb/build_logs/0/build_error_log2.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:27:10: error: redefinition of ‘template<class T> const T* findSpecificTypeInChildren(const clang::Stmt*)’
   27 | const T *findSpecificTypeInChildren(const Stmt *S) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:63:10: note: ‘template<class T> const T* findSpecificTypeInChildren(const clang::Stmt*)’ previously declared here
   63 | const T* findSpecificTypeInChildren(const Stmt *S) {
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
